// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SFooter Snapshot > renders full config correctly 1`] = `
"<footer class="footer-wrapper mt-20 w-full">
  <div class="py-0 lg:py-0">
    <div class="bg-primary-800 dark:bg-primary-950 w-full py-30">
      <div class="mx-auto max-w-[1248px] px-4">
        <nav class="xl:grid xl:grid-cols-3 xl:gap-8 footer-columns-large">
          <div class="mb-10 xl:mb-0">
            <div class="flex flex-col items-start space-x-2"><span class="pb-4 text-4xl font-bold">My Company</span>
              <p class="font-bold">Subscribe to our newsletter.</p>
              <p>Join a trillion readers and stay ahead of the curve.</p><button type="submit" class="inline-flex items-center focus:outline-hidden disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors gap-2 ring ring-inset ring-(--ui-primary)/50 hover:bg-(--ui-primary)/10 disabled:bg-transparent aria-disabled:bg-transparent dark:disabled:bg-transparent dark:aria-disabled:bg-transparent focus-visible:ring-2 focus-visible:ring-(--ui-primary) text-primary-100 dark:text-primary-100 my-4 rounded-md px-4 py-2 text-lg font-semibold">
                <!--v-if--><span class="truncate">Subscribe</span>
                <!--v-if-->
              </button>
            </div>
          </div>
          <div class="flex flex-col lg:grid grid-flow-col auto-cols-fr gap-8 xl:col-span-2">
            <div>
              <h3 class="text-sm font-semibold">Products</h3>
              <ul class="mt-6 space-y-4">
                <li class="relative"><a href="/product-1" class="group text-sm flex items-center gap-1.5 focus-visible:outline-(--ui-primary) text-(--ui-text-muted) hover:text-(--ui-text) transition-colors">
                    <!--v-if--><span class="truncate">Product 1<!--v-if--></span>
                  </a></li>
                <li class="relative"><a href="/product-2" class="group text-sm flex items-center gap-1.5 focus-visible:outline-(--ui-primary) text-(--ui-text-muted) hover:text-(--ui-text) transition-colors">
                    <!--v-if--><span class="truncate">Product 2<!--v-if--></span>
                  </a></li>
              </ul>
            </div>
            <div>
              <h3 class="text-sm font-semibold">Support</h3>
              <ul class="mt-6 space-y-4">
                <li class="relative"><a href="/support" class="group text-sm flex items-center gap-1.5 focus-visible:outline-(--ui-primary) text-(--ui-text-muted) hover:text-(--ui-text) transition-colors">
                    <!--v-if--><span class="truncate">Help Center<!--v-if--></span>
                  </a></li>
              </ul>
            </div>
          </div>
          <!--v-if-->
        </nav>
      </div>
    </div>
  </div>
  <div class="max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 py-8 lg:py-4 lg:flex lg:items-center lg:justify-between lg:gap-x-3">
    <div class="lg:flex-1 flex items-center justify-center lg:justify-end gap-x-1.5 lg:order-3"></div>
    <div class="mt-3 lg:mt-0 lg:order-2 flex items-center justify-center"></div>
    <div class="flex items-center justify-center lg:justify-start lg:flex-1 gap-x-1.5 mt-3 lg:mt-0 lg:order-1"></div>
  </div>
  <div class="py-0 lg:py-0">
    <div class="mx-auto flex max-w-[1248px] items-center justify-between py-8 md:flex-row">
      <div class="flex flex-row items-center md:mb-0">
        <!-- Social Links -->
        <nav aria-label="Social Media Links" class="flex"><a href="https://twitter.com" rel="noopener noreferrer" target="_blank" aria-label="Twitter" class="mr-6"><span class="iconify i-twitter-icon text-primary-600 hover:text-primary-900 dark:text-primary-400 dark:hover:text-primary-200 size-5" aria-hidden="true"></span><span class="sr-only">Visit our Twitter page</span></a><a href="https://facebook.com" rel="noopener noreferrer" target="_blank" aria-label="Facebook" class="mr-6"><span class="iconify i-facebook-icon text-primary-600 hover:text-primary-900 dark:text-primary-400 dark:hover:text-primary-200 size-5" aria-hidden="true"></span><span class="sr-only">Visit our Facebook page</span></a></nav>
      </div>
      <div aria-label="Legal Navigation" class="flex flex-col text-sm sm:items-center md:flex-row">
        <div class="flex flex-col flex-wrap justify-center gap-4 sm:flex-row md:justify-end"><a href="/privacy" class="text-primary-600 hover:text-primary-900 dark:text-primary-400 dark:hover:text-primary-200">Privacy Policy</a><a href="/terms" class="text-primary-600 hover:text-primary-900 dark:text-primary-400 dark:hover:text-primary-200">Terms of Service</a></div>
      </div>
    </div>
  </div>
</footer>"
`;

exports[`SFooter Snapshot > renders minimal config with empty arrays correctly 1`] = `
"<footer class="footer-wrapper mt-20 w-full">
  <div class="py-0 lg:py-0">
    <div class="bg-primary-800 dark:bg-primary-950 w-full py-30">
      <div class="mx-auto max-w-[1248px] px-4">
        <nav class="xl:grid xl:grid-cols-3 xl:gap-8 footer-columns-large">
          <div class="mb-10 xl:mb-0">
            <div class="flex flex-col items-start space-x-2"><span class="pb-4 text-4xl font-bold">Minimal Inc.</span>
              <p class="font-bold">Subscribe to our newsletter.</p>
              <p>Join a trillion readers and stay ahead of the curve.</p><button type="submit" class="inline-flex items-center focus:outline-hidden disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors gap-2 ring ring-inset ring-(--ui-primary)/50 hover:bg-(--ui-primary)/10 disabled:bg-transparent aria-disabled:bg-transparent dark:disabled:bg-transparent dark:aria-disabled:bg-transparent focus-visible:ring-2 focus-visible:ring-(--ui-primary) text-primary-100 dark:text-primary-100 my-4 rounded-md px-4 py-2 text-lg font-semibold">
                <!--v-if--><span class="truncate">Subscribe</span>
                <!--v-if-->
              </button>
            </div>
          </div>
          <!--v-if-->
          <!--v-if-->
        </nav>
      </div>
    </div>
  </div>
  <div class="max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 py-8 lg:py-4 lg:flex lg:items-center lg:justify-between lg:gap-x-3">
    <div class="lg:flex-1 flex items-center justify-center lg:justify-end gap-x-1.5 lg:order-3"></div>
    <div class="mt-3 lg:mt-0 lg:order-2 flex items-center justify-center"></div>
    <div class="flex items-center justify-center lg:justify-start lg:flex-1 gap-x-1.5 mt-3 lg:mt-0 lg:order-1"></div>
  </div>
  <div class="py-0 lg:py-0">
    <div class="mx-auto flex max-w-[1248px] items-center justify-between py-8 md:flex-row">
      <div class="flex flex-row items-center md:mb-0">
        <!-- Social Links -->
        <nav aria-label="Social Media Links" class="flex"></nav>
      </div>
      <div aria-label="Legal Navigation" class="flex flex-col text-sm sm:items-center md:flex-row">
        <div class="flex flex-col flex-wrap justify-center gap-4 sm:flex-row md:justify-end"></div>
      </div>
    </div>
  </div>
</footer>"
`;
